<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lucas2.agenda.NovoTrabalho">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trabalho"/>
        <EditText
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:background="@color/form"
            android:id="@+id/trabDescr">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_final"/>
        <EditText
            android:id="@+id/trabData"
            android:inputType="none"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:background="@color/form"
            android:layout_marginLeft="10px"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:onClick="adicionarTrabalho"/>


</LinearLayout>
