<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.lucas2.agenda.NovaMateria">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia"
            android:textColor="@color/green_form2"
            android:textSize="18sp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/form"
            android:spinnerMode="dropdown"
            android:id="@+id/matSpinner"
            android:layout_marginLeft="95px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px">

         <EditText
            android:id="@+id/matDescr"
            android:hint="@string/descri_o"
            android:layout_width="match_parent"
            android:layout_height="70px"
            android:background="@color/green_form"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/adicionar"
        android:onClick="adicionarMateria"
        android:textColor="@color/white_button"
        android:background="@color/green_buttons"
        />

</LinearLayout>
